Security fixes and RBAC